# SASIR-library

./: CMakeLists.txt  LICENSE.CeCILL  Makefile  README.md  VERSION  cmake_install.cmake  install
cmake/: FindCFITSIO.cmake
include/: CEA_comp_sens.h  Fista.h  Fista_LOFAR.h  GlobalInc.h
src/: lofar_test.cc  sasir.cc
src/liblofar/: CEA_comp_sens.h  Fista_LOFAR.hbak  Fista_LOFAR.h~  MCA_LOFAR.h  lofar_libtest.cc  lofar_libtest.cc~  lofar_test.cc
src/libsasir/: FCur.cc  Fista.h  MCA.h  SB_Filter.cc  SB_Filter1D.cc  SB_Filter_float.cc
src/libtools/: Arr_Fits.cc  DefMath.cc  FFTN.h  FFTN_1D.cc  FFTN_2D.cc  IM_Fits.cc  IM_IOTools.cc  TempArray.h  TempMemory.h
